fixed chevron alignment on createMeetingStep3

--- a/css/main.css
+++ b/css/main.css
@@ -2412,7 +2412,8 @@ div[class^="edit_funds"] {
   border: solid 0.5px #979797;
   border-radius: 8px;
   width: 80%;
-  margin: auto auto; }
+  margin: auto auto;
+  text-align: center; }
   .input_form_create_meeting:hover {
     border: 1px solid #555c82; }
   @media (min-width: 400px) {
@@ -2420,36 +2421,32 @@ div[class^="edit_funds"] {
       max-width: 765px;
       height: 770px;
       margin: 2vh auto; } }
-  .input_form_create_meeting input {
-    font-size: 1em;
-    font-family: sans-serif;
-    font-weight: 200;
-    border: 1px solid #999;
-    padding: .75em 1em;
-    margin: 0vh 8vh;
-    box-sizing: border-box;
-    width: 70%; }
-    .input_form_create_meeting input:hover {
+  .input_form_create_meeting .calender_create_meeting {
+    position: relative;
+    display: block;
+    margin: 10px auto; }
+    .input_form_create_meeting .calender_create_meeting input {
+      font-size: 1em;
+      font-family: sans-serif;
+      font-weight: 200;
+      border: 1px solid #999;
+      padding: .75em 1em;
+      width: 70%; }
+      .input_form_create_meeting .calender_create_meeting input:hover {
+        border: 1px solid #555c82; }
+    .input_form_create_meeting .calender_create_meeting :hover {
       border: 1px solid #555c82; }
-    @media (min-width: 400px) {
-      .input_form_create_meeting input {
-        margin: 0vh 4vh;
-        width: 87%; } }
-  .input_form_create_meeting div {
-    display: block; }
-    .input_form_create_meeting div:hover {
-      border: 1px solid #555c82; }
-    .input_form_create_meeting div.personCreate {
-      position: relative;
-      top: 30px;
+    .input_form_create_meeting .calender_create_meeting .chevronLeft {
+      position: absolute;
+      top: 15px;
       left: 7px;
       width: 15px;
       height: 17px;
       background-position: 0 -800px; }
-    .input_form_create_meeting div.emailCreate {
-      position: relative;
-      top: -30px;
-      left: 72vw;
+    .input_form_create_meeting .calender_create_meeting .chevronRight {
+      position: absolute;
+      top: 15px;
+      right: 7px;
       width: 19px;
       height: 20px;
       background-position: 0 -820px; }
